--- a/styless.css
+++ b/styless.css
@@ -46,7 +46,7 @@ body{
 }
 .container button{
     background-color: #512da8;
-    color: 3fff;
+    color: #fff;
     font-size: 12px;
     padding: 10px 45px;
     border: 1px solid transparent;
